# Vortex

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  HelloWorld.cs  LICENSE  README.md  compile_commands.json  frag.spv  gen-wayland-headers.sh  imgui.ini  scene.vproj  vert.spv
Sandbox/: CMakeLists.txt
Sandbox/Source/: ImGuiPanels.cpp  Sandbox.cpp  SandboxLayer2D.cpp  SandboxLayer2D.hpp
Sandbox/src/: ImGuiPanels.cpp  ImGuiPanels.hpp  Sandbox.cpp  SandboxLayer2D.cpp  SandboxLayer2D.hpp
Vortex-Editor/: CMakeLists.txt
Vortex-Editor/Source/: EditorCamera.cpp  EditorCamera.hpp  EditorLayer.cpp  EditorLayer.hpp
Vortex-Editor/Source/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.hpp  Panel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
Vortex-Editor/src/: EditorApplication.cpp  EditorCamera.cpp  EditorCamera.hpp  EditorLayer.cpp  EditorLayer.hpp
Vortex-Editor/src/Panels/: Panel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
Vortex-Engine/: CMakeLists.txt  CMakeLists.txt.in
Vortex-Engine/Source/: vtpch.hpp
Vortex-Engine/Source/Vortex/Asset/: Asset.hpp  AssetManager.cpp  AssetManager.hpp  AssetRegistry.cpp  AssetRegistry.hpp  ShaderLibrary.cpp  ShaderLibrary.hpp
Vortex-Engine/Source/Vortex/Core/: Assertions.hpp  Core.hpp  Export.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Time.hpp  Timer.hpp  Timestep.hpp  Types.hpp  Utf.hpp  Utf.inl
Vortex-Engine/Source/Vortex/Core/Events/: Event.hpp  EventBus.hpp  EventID.hpp  EventQueue.hpp  EventSystem.cpp  EventSystem.hpp
Vortex-Engine/Source/Vortex/Core/Log/: Log.cpp  Log.hpp  Logger.cpp  Logger.hpp
Vortex-Engine/Source/Vortex/Core/Math/: AABB.hpp  Math.hpp  Matrix.hpp  Ray.hpp  Rectangle.hpp  Vector.hpp
Vortex-Engine/Source/Vortex/Core/Memory/: ArenaAllocator.hpp  MemoryManager.hpp
Vortex-Engine/Source/Vortex/Core/Posix/: PosixTime.cpp
Vortex-Engine/Source/Vortex/Core/Win32/: Win32Time.cpp  Windows.hpp
Vortex-Engine/Source/Vortex/Engine/: Application.cpp  Application.hpp  EntryPoint.cpp
Vortex-Engine/Source/Vortex/Filesystem/: Filesystem.cpp  Filesystem.hpp
Vortex-Engine/Source/Vortex/Renderer/: Camera.cpp  Camera.hpp  Image.cpp  Image.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  SceneRenderer.cpp  SceneRenderer.hpp  VertexBufferLayout.hpp
Vortex-Engine/Source/Vortex/Renderer/API/: Framebuffer.cpp  Framebuffer.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Material.cpp  Material.hpp  RendererBackend.hpp  Shader.cpp  Shader.hpp  SwapChain.cpp  SwapChain.hpp  Texture2D.cpp  Texture2D.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Vortex-Engine/Source/Vortex/Scene/: Components.hpp  Entity.hpp  Scene.cpp  Scene.hpp
Vortex-Engine/Source/Vortex/Script/: ScriptEngine.cpp  ScriptEngine.hpp
Vortex-Engine/Source/Vortex/Utility/: Image.cpp  Image.hpp  ImageLoader.cpp  ImageLoader.hpp  ZLib.cpp  ZLib.hpp
Vortex-Engine/Source/Vortex/Window/: Monitor.cpp  Monitor.hpp  Window.cpp  Window.hpp
Vortex-Engine/assets/shaders/: basic.frag  basic.vert  basic.vulkan.vert  batch.frag  batch.vert  light.frag  light.vert
Vortex-Engine/cmake/: Dependencies.cmake
Vortex-Engine/src/: Vortex.hpp  vtpch.hpp
Vortex-Engine/src/Vortex/: Engine.cpp  Engine.hpp  EntryPoint.cpp  vtpch.cpp  vtpch.hpp
Vortex-Engine/src/Vortex/Audio/: Audio.hpp  AudioListener.cpp  AudioListener.hpp  AudioManager.cpp  AudioManager.hpp  AudioSource.cpp  AudioSource.hpp  IAudioContext.cpp  IAudioContext.hpp  ISound.cpp  ISound.hpp  ISoundBuffer.cpp  ISoundBuffer.hpp  OpenAL.cpp  OpenAL.hpp  SoundBuffer.cpp  SoundBuffer.hpp
Vortex-Engine/src/Vortex/Core/: Application.cpp  Application.hpp  Assertions.hpp  Core.hpp  EntryPoint.hpp  Event.hpp  EventSystem.cpp  EventSystem.hpp  Export.hpp  HashedString.hpp  IEvent.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Logger.cpp  Logger.hpp  LoggingManager.cpp  LoggingManager.hpp  Macros.hpp  MemoryManager.cpp  MemoryManager.hpp  NonCopyable.hpp  Platform.cpp  Platform.hpp  PlatformInit.cpp  PlatformInit.hpp  PosixPlatform.cpp  Profiler.hpp  Singleton.hpp  Time.cpp  Time.hpp  Timer.hpp  Timestep.hpp  Types.hpp  Utf.hpp  Utf.inl  Win32Platform.cpp  WindowManager.cpp  WindowManager.hpp  main.cpp
Vortex-Engine/src/Vortex/Engine/: Application.cpp  Application.hpp  BuildImGui.cpp  Engine.cpp  Engine.hpp  EntryPoint.cpp  main.cpp
Vortex-Engine/src/Vortex/Graphics/: Camera.cpp  Camera.hpp  CameraController3D.cpp  CameraController3D.hpp  Color.hpp  Color.inl  FPSCameraController.cpp  FPSCameraController.hpp  Graphics.hpp  IGraphicsContext.hpp  IIndexBuffer.cpp  IIndexBuffer.hpp  IMesh.cpp  IMesh.hpp  IRendererAPI.cpp  IRendererAPI.hpp  IShader.cpp  IShader.hpp  IVertexBuffer.cpp  IVertexBuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  ShaderLibrary.cpp  ShaderLibrary.hpp  Sprite.cpp  Sprite.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.hpp
Vortex-Engine/src/Vortex/Input/: Gamepad.cpp  Gamepad.hpp  Input.hpp  KeyCode.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  MouseCode.hpp
Vortex-Engine/src/Vortex/Platform/: EGL.hpp  EGLContext.hpp  LibraryManager.hpp  MachineInfo.hpp  OpenGL.cpp  OpenGL.hpp  Platform.hpp  PosixPlatform.cpp  Win32Platform.cpp
Vortex-Engine/src/Vortex/Renderer/: Camera.cpp  Camera.hpp  Image.cpp  Image.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  VertexBufferLayout.hpp
Vortex-Engine/src/Vortex/Scene/: Entity.hpp  Scene.cpp  Scene.hpp
Vortex-Engine/src/Vortex/Utility/: AudioLoader.cpp  AudioLoader.hpp  ImageLoader.cpp  ImageLoader.hpp  TextureLoader.cpp  TextureLoader.hpp  Timer.cpp  Timer.hpp  Utility.hpp
Vortex-Engine/src/Vortex/Window/: IWindow.cpp  IWindow.hpp  Monitor.cpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp
XSandbox/: CMakeLists.txt
XSandbox/src/: Sandbox.cpp  Sandbox.hpp
(+390 files in other folders)
